@@ -47,6 +47,7 @@ Version 1.9.0-svn:
    * Add [replace_schedule] tag, which replaces the time of day schedule
    * Trying to include a missing macro/file is now a fatal error
    * Extended #ifdef so that it also tests for files and directories
+   * Add [music_volume] tag, which permits modifications to music volume during scenario
  * Miscellaneous and bug fixes:
    * Defaulted log level to warning again
    * New option to auto-set delay shroud update on game start
